<resources>
    <string name="app_name">基础使用</string>

    <!-- activity_main -->
    <string name="tanChuangShiYong">弹窗使用</string>
    <string name="intentShiYong">Intent使用</string>
    <string name="ListViewShiYong">ListView使用</string>
    <string name="RecyclerViewShiYong">RecyclerView使用</string>
    <string name="notification">Notification使用</string>
    <string name="handler">Handler使用</string>
    <string name="touchEvent">TouchEvent使用</string>
    <string name="configuration">Configuration使用</string>
    <string name="asyncTask">AsyncTask使用</string>
    <string name="service">Service使用</string>
    <string name="startService">startService使用</string>
    <string name="stopService">stopService使用</string>
    <string name="bindService">bindService使用</string>
    <string name="unbindService">unbindService使用</string>
    <string name="intentService">IntentService使用</string>
    <string name="broadcastReceiver">BroadcastReceiver使用</string>
    <string name="sendBroadcast">BroadcastReceiver静态使用</string>
    <string name="registerReceiver">BroadcastReceiver动态使用</string>
    <string name="contentProvider">ContentProvider使用</string>
    <string name="fragment">Fragment使用</string>
    <string name="sqlite">SQLite使用</string>
    <string name="http">HTTP使用</string>

    <!-- activity_dialog -->
    <string name="popupWindowShiYong">PopupWindow的使用</string>
    <string name="alertDialogShiYong">AlertDialog的使用</string>

    <!-- activity_content -->
    <string name="xuanXiang">选项</string>
    <string name="xuanXiang1">选项1</string>
    <string name="xuanXiang2">选项2</string>

    <!-- acticity_intent -->
    <string name="intentXianShi">Intent显示使用</string>
    <string name="intentYinShi">Intent隐示使用</string>

    <!--  acticity2_intent -->
    <string name="webView1">显示Intent+WebView</string>
    <string name="webView2">隐示Intent+WebView</string>
    <string name="add_data">添加数据</string>
    <string name="switch_theme">切换布局</string>
    <string name="add_one_data">插入一条数据</string>
    <string name="delete_one_data">删除一条数据</string>
    <string name="down">下载到内部存储</string>
    <string name="load">加载</string>
    <string name="glide">glide</string>
    <string name="glideapp">glideApp</string>
    <string name="tiaoguo">跳过</string>


</resources>