<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/xuanXiang"/>

    <Button
        android:id="@+id/bn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xuanXiang1"/>

    <Button
        android:id="@+id/bn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xuanXiang2"/>

</LinearLayout>